# daedra

./: README.md  TODO.md
cloakd/: Makefile  cloakd.c  commands.h  crypto.c  crypto.h
lyzp/: CMakeLists.txt  README.md
lyzp/include/: ast.h  buffer.h  evaluator.h  lexer.h  parser.h  token.h
lyzp/src/: evaluator.cpp  lyzp.cpp  parser.cpp
lyzp/test/: basic.ly  lyzpBufferTests.cpp  lyzpLexerTests.cpp  lyzpParserTests.cpp  lyzpTests.cpp
tools/: Makefile  cloakd_communication_tool.c
