cmake_minimum_required(VERSION 2.8)
project(lyzp)

include_directories(${lyzp_SOURCE_DIR}/include)
link_directories(${lyzp_BINARY_DIR}/bin)
option(UnitTests "Build tests" OFF)

set(CMAKE_CXX_FLAGS "-g -std=c++14 -W -Wall -Werror -Wextra")
file(GLOB_RECURSE LYZP_SOURCES "src/*.cpp")
add_executable(lyzp ${LYZP_SOURCES})

if (UnitTests)
    set(lyzp_test_exe lyzpTests)
    file(GLOB_RECURSE LYZP_SOURCES "src/*.cpp")
    file(GLOB_RECURSE LYZP_TEST_SOURCES "test/*.cpp")
    list(REMOVE_ITEM LYZP_SOURCES "${lyzp_SOURCE_DIR}/src/lyzp.cpp")
    message("${LYZP_SOURCES}")
    enable_testing()
    find_package(GTest REQUIRED)
    include_directories(${GTEST_INCLUDE_DIRS})
    set(THREADS_PREFER_PTHREAD_FLAG ON)
    find_package(Threads REQUIRED)
    add_executable(${lyzp_test_exe} ${LYZP_SOURCES} ${LYZP_TEST_SOURCES})
    target_link_libraries(${lyzp_test_exe} Threads::Threads ${GTEST_BOTH_LIBRARIES})
endif()
